--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@ h1.subheadertext { font-size: 18px; text-align: center; }
 .nav ul, .nav-fixed ul { margin: auto; height: 5px; width: 35px; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; text-align: center; content:""; }
 .nav li, .nav-fixed li { display: none; }
 .nav a, .nav-fixed a { display: block;  text-align: center; }
-.nav ul:hover, .nav-fixed ul:hover { height: 100%; width: 100%; background-position: top center; border: none; }
-.nav ul:hover li, .nav-fixed ul:hover li { display: block; float: none; margin: 0 0 2px; border-left: none; text-align: center; }
-.nav ul:hover li.menubutton, .nav-fixed ul:hover li.menubutton { display: inline-block; height: 5px; width: 35px; border-bottom: 17px double #61dafb;
-  border-top: 6px solid #61dafb; content:""; }
+.nav ul:hover, .nav-fixed ul:hover, .nav ul:active, .nav-fixed ul:active { height: 100%; width: 100%; background-position: top center; border: none; }
+.nav ul:hover li, .nav-fixed ul:hover li, .nav ul:active li, .nav-fixed ul:active li { display: block; float: none; margin: 0 0 2px; border-left: none; text-align: center; }
+.nav ul:hover li.menubutton, .nav-fixed ul:hover li.menubutton, .nav ul:active li.menubutton, .nav-fixed ul:active li.menubutton { display: inline-block; height: 5px;
+ width: 35px; border-bottom: 17px double #61dafb; border-top: 6px solid #61dafb; content:""; }
 .container_main { z-index: 0; width: 90%; }
 a.anchor { display: block; position: relative; visibility: hidden; top: -40px; }
 div.backtotop { display: block; float: right; padding-top: 30px; }
